--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -103,15 +103,28 @@
                                 {{playlist.name}}
                         </h1>
                         <p>{{playlist.description}}</p>
-                        <h6>{{ get_number_of_songs(playlist.id) }} songs</h6>
-                        <h6>Updated {{playlist.time_updated.strftime('%b %d, %Y')}}</h6>
-                        <hr class='hr-black'>
-                        <h4>Latest Song: {{get_latest_song(playlist.id).title}} By {{ get_latest_song(playlist.id).artist }}</h4>
 
+                        {% if get_number_of_songs(playlist.id) %}
+                        <h6>{{ get_number_of_songs(playlist.id) }} songs</h6>
+                        {% else %}
+                        <h6>0 songs</h6>
+                        {% endif %}
+
+                        {% if playlist.time_updated %}
+                        <h6>Updated {{playlist.time_updated.strftime('%b %d, %Y')}}</h6>
+                        {% else %}
+                        <h6>Created: {{playlist.time_created.strftime('%b %d, %Y')}}</h6>
+                        {% endif %}
+
+                        <hr class='hr-black'>
+                        {% if get_number_of_songs(playlist.id) %}
+                        <h4>Latest Song: {{get_latest_song(playlist.id).title}} By {{ get_latest_song(playlist.id).artist }}</h4>
+                        {% endif %}
                     </a>
 
 
                     <div class='playlist-tile-text'>
+                        {% if get_number_of_songs(playlist.id) %}
                         <div id="player" class="youtube-div">
                             <iframe
                                  class='youtube-iframe-front'
@@ -119,6 +132,7 @@
                                  frameborder="0" allowfullscreen>
                              </iframe>
                         </div>
+                        {% endif %}
 
                     </div>
                 </div>
@@ -127,33 +141,6 @@
             </div>
 
 
-            <!-- <div class='col-md-10 col-md-offset-1 playlist'>
-                <div class='col-md-4'>
-                    <iframe
-                         class='youtube-iframe-front'
-                         src="https://www.youtube.com/embed/{{get_latest_song(playlist.id).youtube}}"
-                         frameborder="0" allowfullscreen>
-                     </iframe>
-                </div>
-                <div class='col-md-8 playlist-info'>
-                    <a href="{{ url_for('showSongs', playlist_id = playlist.id) }}">
-                    <h2>{{playlist.name}}</h2>
-                    <h4>Has {{ get_number_of_songs(playlist.id) }} songs</h4>
-
-                    <p>{{playlist.description}}</p>
-                    <h5>Updated {{playlist.time_updated.strftime('%b %d, %Y')}}</h5>
-                    <h4>Latest Song: {{get_latest_song(playlist.id).title}} By {{ get_latest_song(playlist.id).artist }}</h4>
-
-
-
-                    </a>
-                </div>
-
-
-            </div> -->
-            <!-- <div class='col-md-10 col-md-offset-1'>
-                <hr class='hr-playlist'>
-            </div> -->
 
             {% endfor %}
             </div>
