refactor: Update spacing

--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -98,7 +98,7 @@
             <div class='col-md-4 playlist-tile'>
                 <div class='top-playlist text-center'>
                     <a class='' href="{{url_for('showSongs',
-                            playlist_id = latest_song.playlist_id)}}">
+                            playlist_id = playlist.id)}}">
                         <h1 class='text-center playlist-tile-text special-h2'>
                                 {{playlist.name}}
                         </h1>
