--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-<div class='container-fluid playlists'>
 
-    <div class='col-md-offset-4 col-md-4 flash text-center'>
+
+
+<div class='container-fluid playlists'>
+    <div class='col-md-offset-4 col-md-4 text-center'>
     {% with messages = get_flashed_messages() %}
         {% if messages %}
         <ul>
@@ -13,37 +15,10 @@
         {% endif %}
     {% endwith %}
     </div>
-
-
+    <br>
+    <br>
     <div class='col-md-12 top-row'>
-        <div class='col-md-4 playlist-tile-special'>
-            <div class='top-playlist text-center'>
-                <a class='song-list' href="{{url_for('showSongs',
-                        playlist_id = latest_song.playlist_id)}}">
-                    <h2 class='text-center playlist-tile-text special-h2'>
-                            Latest Song
-                    </h2>
-                </a>
-                <hr>
-
-                <div class='playlist-tile-text'>
-                    <h4 class='playlist-description'>{{latest_song.title}}</h4>
-                    <p class='playlist-description'>by {{latest_song.artist}}</p>
-                    <br>
-                    <div id="player" class="youtube-div">
-                        <iframe
-                             class='youtube-iframe-front'
-                             src="https://www.youtube.com/embed/{{latest_song.youtube}}"
-                             frameborder="0" allowfullscreen>
-                         </iframe>
-                    </div>
-                    <h5 class='playlist-time text-left'>Last Modified: {{latest_song.time_created}}</h5>
-                </div>
-            </div>
-        </div>
-
-
-        <div class='col-md-4 text-center welcome-tile'>
+        <div class='container-fluid text-center welcome-tile'>
             <h1 class="playlist-h1">Welcome</h1>
 
             <div class='container-fluid'>
@@ -55,7 +30,6 @@
                 </p>
                 </div>
             </div>
-
             <div class='create-playlist'>
                 <a href = "{{url_for('newPlaylist')}}">
                     <button type="button" class="btn btn-default create-playlist-btn">
@@ -63,90 +37,141 @@
                     </button>
                 </a>
             </div>
+
         </div>
 
-        <div class='col-md-4 playlist-tile-special'>
-            <div class='top-playlist text-center'>
-                <a class="playlist-title" href="{{url_for('showFeaturedSingle',
-                    featured_song_id = featured.id)}}">
-                    <h2 class='text-center playlist-tile-text special-h2'>
-                            Featured Song
-                    </h2>
-                </a>
-                <hr>
-                <div class='playlist-tile-text'>
-                    <h4 class='playlist-description'>{{featured.title}}</h4>
-                    <p class='playlist-description'>by {{featured.artist}}</p>
-                    <br>
-                    <div id="player" class="youtube-div">
-                        <iframe
-                             class='youtube-iframe-front'
-                             src="https://www.youtube.com/embed/{{featured.youtube}}"
-                             frameborder="0" allowfullscreen>
-                         </iframe>
+        <div>
+            <div class='col-md-offset-2 col-md-4 playlist-tile-special'>
+                <div class='top-playlist text-center'>
+                    <a class='' href="{{url_for('showSongs',
+                            playlist_id = latest_song.playlist_id)}}">
+                        <h2 class='text-center playlist-tile-text special-h2'>
+                                Latest Song
+                        </h2>
+                    </a>
+                    <hr class='hr-black'>
+
+                    <div class='playlist-tile-text'>
+                        <h4>{{latest_song.title}}</h4>
+                        <p>by {{latest_song.artist}}</p>
+                        <div id="player" class="youtube-div">
+                            <iframe
+                                 class='youtube-iframe-front'
+                                 src="https://www.youtube.com/embed/{{latest_song.youtube}}"
+                                 frameborder="0" allowfullscreen>
+                             </iframe>
+                        </div>
 
                     </div>
-                    <h5 class='playlist-time text-left'>Last Modified: {{featured.time_created}}</h5>
                 </div>
+                <br>
             </div>
-            <br>
+
+
+
+
+            <div class='col-md-4 playlist-tile-special'>
+                <div class='top-playlist text-center'>
+                    <a class="playlist-title" href="{{url_for('showFeaturedSingle',
+                        featured_song_id = featured.id)}}">
+                        <h2 class='text-center playlist-tile-text special-h2'>
+                                Featured Song
+                        </h2>
+                    </a>
+                    <hr class='hr-black'>
+                    <div class='playlist-tile-text'>
+                        <h4>{{featured.title}}</h4>
+                        <p>by {{featured.artist}}</p>
+
+                        <div id="player" class="youtube-div">
+                            <iframe
+                                 class='youtube-iframe-front'
+                                 src="https://www.youtube.com/embed/{{featured.youtube}}"
+                                 frameborder="0" allowfullscreen>
+                             </iframe>
+                        </div>
+
+                    </div>
+                </div>
+                <br>
+            </div>
+
         </div>
 
+        <div class='col-md-12'>
+            <div class='container-fluid playlists-list'>
+                <h1 class='playlists-title text-center'>Playlists</h1>
 
+            {% for playlist in playlists %}
 
-        {% for playlist in playlists %}
-        <a class="playlist-title" href="{{url_for('showSongs', playlist_id = playlist.id)}}">
-        <div class='col-md-3 playlist-tile'>
+            <div class='col-md-4 playlist-tile'>
+                <div class='top-playlist text-center'>
 
-            <div class='top-playlist '>
-                <h2 class='text-center playlist-tile-text'>
+                    <a class='' href="{{url_for('showSongs',
+                            playlist_id = playlist.id)}}">
+                        <h1 class='text-center playlist-tile-text special-h2'>
+                                {{playlist.name}}
+                        </h1>
+                        <p>{{playlist.description}}</p>
 
-                        {{playlist.name}}
+                        {% if get_number_of_songs(playlist.id) %}
+                        <h6>{{ get_number_of_songs(playlist.id) }} songs</h6>
+                        {% else %}
+                        <h6>0 songs</h6>
+                        {% endif %}
 
-                </h2>
-                <h4 class='text-center playlist-tile-text'>By {{playlist.user.name}}</h4>
-                <hr>
+                        {% if playlist.time_updated %}
+                        <h6>Updated {{playlist.time_updated.strftime('%b %d, %Y')}}</h6>
+                        {% else %}
+                        <h6>Created: {{playlist.time_created.strftime('%b %d, %Y')}}</h6>
+                        {% endif %}
+                    </a>
+                    <div class='row container-fluid'>
+                        <div class='play-button' >
+                            <a class='playlist-description edit'
+                                href="{{url_for('editPlaylist',
+                                    playlist_id = playlist.id)}}">
+                                Edit Playlist
+                            </a>
+                            |
+                            <a class='delete playlist-description'
+                                href="{{url_for('deletePlaylist',
+                                    playlist_id = playlist.id)}}">
+                                Delete
+                            </a>
+                        </div>
+                    </div>
 
-
-                <div class='playlist-tile-text'>
-                    <h4 class='playlist-description'>Description: </h4>
-                    <p class='playlist-description'>{{playlist.description}}</p>
-                    <br>
-                    {% if playlist.time_updated %}
-                    <h5 class='playlist-time text-left'>Last Modified: {{playlist.time_updated}}</h5>
-                    {% else %}
-                    <h5 class='playlist-time text-left'>Created On: {{ playlist.time_created }}</h5>
+                    <hr class='hr-black'>
+                    {% if get_number_of_songs(playlist.id) %}
+                    <h4>Latest Song: {{get_latest_song(playlist.id).title}} By {{ get_latest_song(playlist.id).artist }}</h4>
                     {% endif %}
-                </div>
 
-                <div class='row'>
-                    <div class='col-md-8 play-button' >
-                        <a class='playlist-description edit'
-                            href="{{url_for('editPlaylist',
-                                playlist_id = playlist.id)}}">
-                            Edit Playlist
-                        </a>
-                        |
-                        <a class='delete playlist-description'
-                            href="{{url_for('deletePlaylist',
-                                playlist_id = playlist.id)}}">
-                            Delete
-                        </a>
+                    <div class='playlist-tile-text'>
+                        {% if get_number_of_songs(playlist.id) %}
+                        <div id="player" class="youtube-div">
+                            <iframe
+                                 class='youtube-iframe-front'
+                                 src="https://www.youtube.com/embed/{{get_latest_song(playlist.id).youtube}}"
+                                 frameborder="0" allowfullscreen>
+                             </iframe>
+                        </div>
+                        {% endif %}
+
                     </div>
                 </div>
+                <br>
 
             </div>
-            <br>
 
-        </div>
-        </a>
 
-        {% endfor %}
+
+            {% endfor %}
+            </div>
+        </dvi>
 
     </div>
-
 </div>
-
 
 
 {% endblock %}
