--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -37,6 +37,7 @@ a:hover{
 #home{
     font-size: 30px;
     color: white;
+    font-variant: small-caps;
 }
 
 #user-image{
@@ -87,8 +88,9 @@ ul{
 
 .playlists-title{
     font-variant: small-caps;
-    font-size: 50px;
-    margin-top: 5vh;
+    font-size: 60px;
+    margin-top: 7vh;
+    font-weight: bold;
 
 }
 
