refactor: Update spacing for create playlist button, changed user image from square to circle"

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -42,7 +42,9 @@ a:hover{
 
 #user-image{
     margin-right: 1vw;
+    border-radius: 50%;
 }
+
 #home:hover,
 #login:hover,
 #logout-a:hover{
@@ -146,6 +148,7 @@ ul{
     color: white;
     border-radius: 25px;
     border: 2px solid #88887B;
+    margin-top: 3vh;
 }
 
 
