--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -121,9 +121,9 @@
                         {% endif %}
 
                         {% if playlist.time_updated %}
-                        <h6>Updated {{playlist.time_updated.strftime('%b %d, %Y')}}</h6>
+                        <h6>Updated on {{playlist.time_updated.strftime('%b %d, %Y')}}</h6>
                         {% else %}
-                        <h6>Created: {{playlist.time_created.strftime('%b %d, %Y')}}</h6>
+                        <h6>Created on {{playlist.time_created.strftime('%b %d, %Y')}}</h6>
                         {% endif %}
                     </a>
                     <div class='row container-fluid'>
