--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -111,15 +111,13 @@
                         {% endif %}
 
                         {% if playlist.time_updated %}
-                        <h6>Updated {{playlist.time_updated.strftime('%b %d, %Y')}}</h6>
+                        <h6>Updated on {{playlist.time_updated.strftime('%b %d, %Y')}}</h6>
                         {% else %}
-                        <h6>Created: {{playlist.time_created.strftime('%b %d, %Y')}}</h6>
+                        <h6>Created on {{playlist.time_created.strftime('%b %d, %Y')}}</h6>
                         {% endif %}
 
                         <hr class='hr-black'>
-                        {% if get_number_of_songs(playlist.id) %}
-                        <h4>Latest Song: {{get_latest_song(playlist.id).title}} By {{ get_latest_song(playlist.id).artist }}</h4>
-                        {% endif %}
+
                     </a>
 
 
