refactor: Change playlist query, sort by time modified

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -142,6 +142,11 @@ ul{
     margin-right: auto;
 }
 
+/*.featured-youtube{
+    width: 35vw;
+    height: 40vh;
+}*/
+
 
 .create-playlist-btn{
     background-color: #111135;
