refactor: Revert layout to featured and latest

--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -33,7 +33,7 @@
         </div>
 
         <div>
-            <div class='col-md-offset-2 col-md-4 playlist-tile-special'>
+            <div class='col-md-4 col-md-offset-2 playlist-tile-special'>
                 <div class='top-playlist text-center'>
                     <a class='' href="{{url_for('showSongs',
                             playlist_id = latest_song.playlist_id)}}">
