--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -35,22 +35,17 @@
         <div>
             <div class='col-md-4 col-md-offset-2 playlist-tile-special'>
                 <div class='top-playlist text-center'>
-                    <a class='' href="{{url_for('showSongs',
-                            playlist_id = latest_song.playlist_id)}}">
-                        <h2 class='text-center playlist-tile-text special-h2'>
-                                Latest Song
-                        </h2>
-                    </a>
+                    <h2 class='text-center playlist-tile-text special-h2'>
+                            Latest Song
+                    </h2>
                     <hr class='hr-black'>
 
                     <div class='playlist-tile-text'>
-                        <h4>{{latest_song.title}}</h4>
-                        <p>by {{latest_song.artist}}</p>
                         <div id="player" class="youtube-div">
                             <iframe
-                                 class='youtube-iframe-front'
-                                 src="https://www.youtube.com/embed/{{latest_song.youtube}}"
-                                 frameborder="0" allowfullscreen>
+                                class='youtube-iframe-front'
+                                src="https://www.youtube.com/embed/?autoplay=1&iv_load_policy=3&controls=2&playlist={{ songList }}"
+                                frameborder="0" allowfullscreen>
                              </iframe>
                         </div>
 
@@ -75,8 +70,7 @@
                     </a>
                     <hr class='hr-black'>
                     <div class='playlist-tile-text'>
-                        <h4>{{featured.title}}</h4>
-                        <p>by {{featured.artist}}</p>
+
 
                         <div class="youtube-div">
                             <iframe
@@ -85,6 +79,8 @@
                                  frameborder="0" allowfullscreen>
                              </iframe>
                         </div>
+                        <h4>{{featured.title}}</h4>
+                        <p>by {{featured.artist}}</p>
 
                     </div>
                 </div>
@@ -105,9 +101,10 @@
                         <h1 class='text-center playlist-tile-text special-h2'>
                                 {{playlist.name}}
                         </h1>
-                        <p>{{playlist.description}}</p>
-                        
+
+
                         <hr class='hr-black'>
+
 
                     </a>
 
@@ -124,20 +121,19 @@
                         {% endif %}
 
                     </div>
+                    <br>
+                    <p>{{playlist.description}}</p>
 
 
 
-                    {% if get_number_of_songs(playlist.id) %}
-                    <h6>{{ get_number_of_songs(playlist.id) }} songs</h6>
+                    {% if get_number_of_songs(playlist.id) == 1 %}
+                    <h6>{{ get_number_of_songs(playlist.id) }} song</h6>
+                    {% elif get_number_of_songs(playlist.id) > 1 %}
+                    <h6>{{get_number_of_songs(playlist.id)}} songs</h6>
                     {% else %}
                     <h6>0 songs</h6>
                     {% endif %}
 
-                    {% if playlist.time_updated %}
-                    <h6>Updated on {{playlist.time_updated.strftime('%b %d, %Y')}}</h6>
-                    {% else %}
-                    <h6>Created on {{playlist.time_created.strftime('%b %d, %Y')}}</h6>
-                    {% endif %}
                 </div>
                 <br>
 
