refactor: Update playlist title layout

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content='width=device-width, initial-scale=1'>
         <meta name="author" content="Ian Agpawa">
-        <meta name="description" content="Catalog">
+        <meta name="description" content="Music Catalog">
         <title>Aural History</title>
 
         <link rel="icon" type="image/x-icon" href="/static/code-break/favicon.ico">
