refactor: Remove featured songs colon

--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -64,7 +64,7 @@
                     <a class="playlist-title" href="{{url_for('showFeaturedSingle',
                         featured_song_id = featured.id)}}">
                         <h2 class='text-center playlist-tile-text special-h2'>
-                                Featured Song:
+                                Featured Song
                         </h2>
 
                     </a>
