refactor: Update public playlists and playlist for small screen layout

--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -88,7 +88,7 @@
         </div>
 
         <div class='col-md-12'>
-            <div class='container-fluid playlists-list'>
+            <div class='playlists-list'>
                 <h1 class='playlists-title text-center'>Playlists</h1>
             {% for playlist in playlists %}
 
@@ -135,7 +135,7 @@
 
             {% endfor %}
             </div>
-        </dvi>
+        </div>
 
     </div>
 </div>
