--- a/static/styles/media.css
+++ b/static/styles/media.css
@@ -15,3 +15,9 @@
         display: none;
     }
 }
+
+@media screen and (max-width: 400px){
+    .playlist-title{
+        font-size: 40px;
+    }
+}
