--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -93,7 +93,7 @@
         </div>
 
         <div class='col-md-12'>
-            <div class='container-fluid playlists-list'>
+            <div class='playlists-list'>
                 <h1 class='playlists-title text-center'>Playlists</h1>
 
             {% for playlist in playlists %}
