--- a/static/styles/media.css
+++ b/static/styles/media.css
@@ -6,8 +6,8 @@
     }
 
     .youtube-iframe-front{
-        width: 60vw;
-        height: 30vh;
+        width: 100%;
+        height: 40vh;
 
     }
 
