refactor: Update sizing of youtube player for songs route

--- a/templates/songs.html
+++ b/templates/songs.html
@@ -42,7 +42,7 @@
 
 	<div class='col-md-12 post-youtube'>
 		<div id="player" class="col-md-6 youtube-div">
-			<iframe id='youtube-iframe' class="iframe-youtube"
+			<iframe id='youtube-iframe' class="iframe-youtube public-yp"
 			src="https://www.youtube.com/embed/?autoplay=1&iv_load_policy=3&controls=2&playlist={{ songList }}"
 				frameborder="0" allowfullscreen>
 			</iframe>
