--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class='col-md-offset-4 col-md-4 text-center login-page'>
+<div class='col-xs-8 col-xs-offset-2 col-md-offset-4 col-md-4 text-center login-page'>
     <div class='flash text-center'>
     {% with messages = get_flashed_messages() %}
         {% if messages %}
