--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
            rel="stylesheet"
            integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
            crossorigin="anonymous">
-
+        <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">
         <link type='text/css' rel="stylesheet" href="/static/styles/main.css">
         <link type='text/css' rel="stylesheet" href="/static/styles/media.css">
 
