--- a/templates/loggedin.html
+++ b/templates/loggedin.html
@@ -1,5 +1,5 @@
 
-<div class='container-fluid'>
+<div class='container-fluid col-md-12'>
 
     <h1>Welcome, {{login_session["username"]}} </h1>
     <img src="{{login_session['picture']}}" style ="width: 300px; height:
