--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@
         </span>
     </div>
 
-    <div id="result"></div>
+    <div class='col-md-6 col-md-offset-3' id="result"></div>
 
     <script>
     function signInCallback(authResult) {
