--- a/templates/single.html
+++ b/templates/single.html
@@ -20,8 +20,29 @@
 
 
     <div class='col-md-4 col-md-offset-2 text-left single-info'>
-        <h2 class='white-letter'>"{{song.title}}"</h2>
-        <h2 class='white-letter'>{{song.artist}}</h2>
+        <h2 class='white-letter'>{{song.title}}</h2>
+        <h3 class='white-letter'>By {{song.artist}}</h3>
+        {% if retrieved_info %}
+            {% if retrieved_info.album and retrieved_info.album_link %}
+            <h3><a class='white-letter' href='{{retrieved_info.album_link}}' target='_blank'>
+                Album: {{retrieved_info.album}}
+            </a></h3>
+            {% endif %}
+
+            {% if retrieved_info.wiki_summary %}
+                <p class='white-letter'>{{retrieved_info.wiki_summary}}</p>
+            {% else %}
+                {% if retrieved_info.wiki_content %}
+                <p class='white-letter'>{{retrieved_info.wiki_content}}</p>
+                {% endif %}
+            {% endif %}
+            {% if retrieved_info.song_url %}
+            <a class='white-letter' href='{{retrieved_info.song_url}}' target='_blank'>
+                Read More at Last.fm
+            </a>
+            {% endif %}
+        {% endif %}
+
         {% if song.rendition %}
         <h4 class='white-letter'>Rendition Of {{song.rendition}}</h4>
         {% endif %}
