--- a/templates/publicplaylists.html
+++ b/templates/publicplaylists.html
@@ -24,7 +24,7 @@
             <div class='container-fluid'>
                 <div class='col-md-8 col-md-offset-2 '>
                 <p>
-                    Thanks for visitng my music catalog!  Feel free to add your
+                    Thanks for visiting my music catalog!  Feel free to add your
                      own playlists, or just browse the playlists below to
                      listen to the music I like.
                 </p>
