refactor: Update click text on single page

--- a/templates/single.html
+++ b/templates/single.html
@@ -38,7 +38,7 @@
             {% endif %}
             {% if retrieved_info.song_url %}
             <a class='white-letter' href='{{retrieved_info.song_url}}' target='_blank'>
-                Read More at Last.fm
+                Click here to read more at Last.fm
             </a>
             {% endif %}
         {% endif %}
